[tool.poetry]
name = "detection-roya"
version = "0.1.0"
description = "A Flask app for detecting coffee leaf rust"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
